dark mode fixing.

--- a/src/components/weather-card/weather-card.scss
+++ b/src/components/weather-card/weather-card.scss
@@ -8,7 +8,7 @@
 		background-color: $content-bg;
 		box-shadow: $box-shadow;
 		width: 200px;
-		height: 38vh;
+		height: 39vh;
 		border-radius: 1em;
 		padding: 2rem;
 		&.dark {
